added currency field to listing
