# app/Http/API/Requests/Listing/CreateListingRequest.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\API\Requests\Listing;
 
+use App\Enums\Currency;
 use App\Enums\PriceType;
 use Illuminate\Foundation\Http\FormRequest;
 use Illuminate\Validation\Rules\Enum;
@@ -14,6 +15,7 @@ class CreateListingRequest extends FormRequest
             'title'        => ['required', 'string', 'max:191'],
             'description'  => ['required', 'string'],
             'price'        => ['required', 'numeric', 'min:0', 'max:9999999'],
+            'currency'     => ['sometimes', 'nullable', new Enum(Currency::class)],
             'price_type'   => ['sometimes', 'nullable', new Enum(PriceType::class)],
             'phone'        => ['sometimes', 'string'],
             'has_whatsapp' => ['sometimes', 'boolean'],
